--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "tsc && cp -r public dist/ && node dist/src/harness.js --start-built",
+    "start": "tsc && node dist/src/harness.js --start-built",
     "dev": "tsx src/harness.ts --start",
     "server": "tsc-watch --onSuccess \"node --import ./dist/src/otel.js dist/src/index.js\"",
-    "server:production": "tsc && cp -r public dist/ && node --import ./dist/src/otel.js dist/src/index.js",
+    "server:production": "tsc && node --import ./dist/src/otel.js dist/src/index.js",
     "server:production:nobuild": "node --import ./dist/src/otel.js dist/src/index.js",
     "format": "prettier --write \"src/**/*.(js|ts)\"",
     "flyio": "node --import ./dist/src/otel.js dist/src/index.js",
     "start:dev": "tsc-watch --onSuccess \"node --import ./dist/src/otel.js dist/src/index.js\"",
-    "build": "tsc && cp -r public dist/",
-    "build:nosentry": "tsc && cp -r public dist/",
+    "build": "tsc",
+    "build:nosentry": "tsc",
     "test": "jest --testPathIgnorePatterns=\"src/__tests__/e2e_noAuth/*\"",
     "test:local-no-auth": "jest --testPathIgnorePatterns=\"src/__tests__/e2e_withAuth/*\"",
     "test:full": "jest --testPathIgnorePatterns=\"(src/__tests__/e2e_noAuth|src/__tests__/e2e_withAuth)\"",
