fix more buttons, add demo page

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "tsc && node dist/src/harness.js --start-built",
     "dev": "tsx src/harness.ts --start",
+    "copy-branding-demo": "mkdir -p dist/public && cp public/branding-demo.html dist/public/branding-demo.html",
     "server": "tsc-watch --onSuccess \"node --import ./dist/src/otel.js dist/src/index.js\"",
     "server:production": "tsc && node --import ./dist/src/otel.js dist/src/index.js",
     "server:production:nobuild": "node --import ./dist/src/otel.js dist/src/index.js",
